HTTPS links whereever possible
fair point from #45

--- a/index.html
+++ b/index.html
@@ -16,8 +16,8 @@
   <!-- Opengraph -->
   <meta property="og:title" content="Droid-Break" />
   <meta property="og:type" content="website" />
-  <meta property="og:image" content="http://droid-break.info/img/misc/droidbreak-logo-big.png" />
-  <meta property="og:url" content="http://droid-break.info/" />
+  <meta property="og:image" content="https://droid-break.info/img/misc/droidbreak-logo-big.png" />
+  <meta property="og:url" content="https://droid-break.info/" />
   <meta property="og:locale" content="en_US" />
   <meta property="og:site_name" content="Droid-Break.info - A list of free high quality alternatives to proprietary android apps" />
   <meta property="og:description" content="Droid-Break offers a list of free high-quality alternatives to proprietary Android apps." />
@@ -29,7 +29,7 @@
 
   <!-- JavaScript -->
   <!-- jQuery via CDN-->
-  <script type="text/javascript" src="http://ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
+  <script type="text/javascript" src="//ajax.googleapis.com/ajax/libs/jquery/2.0.3/jquery.min.js"></script>
 
   <!-- QR codes -->
   <script type="text/javascript" src="js/qrcode.min.js"></script>
@@ -92,7 +92,7 @@
     </p>
     <p>
       You will find most of these apps in the <a href="https://f-droid.org/" target="_blank">F-Droid</a> repository.
-      Also, you might want to consider flashing a custom ROM like <a href="http://www.cyanogenmod.org/" target="_blank">CyanogenMod</a> or <a href="http://replicant.us/" target="_blank">Replicant</a> on your device.
+      Also, you might want to consider flashing a custom ROM like <a href="https://www.cyanogenmod.org/" target="_blank">CyanogenMod</a> or <a href="https://www.replicant.us/" target="_blank">Replicant</a> on your device.
     </p>
   </header>
 
@@ -288,7 +288,7 @@
             <div class="media-Text">
               <h2 class="eps">Impeller</h2>
               <p>
-                Impeller is one of the first open source mobile clients for <a href="http://pump.io" target="_blank">pump.io</a> and can be used e.g. with <a href="http://identi.ca" target="_blank">identi.ca</a>.
+                Impeller is one of the first open source mobile clients for <a href="http://pump.io" target="_blank">pump.io</a> and can be used e.g. with <a href="https://identi.ca" target="_blank">identi.ca</a>.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -332,7 +332,7 @@
         <!-- SocialNetworks:Notes -->
         <td class="notes">
           <p>Twidere might promote non-free add-ons.</p>
-          <p>Popular GNU Social instances include <a href="http://quitter.se/" target="_blank">Quitter</a>, <a href="https://loadaverage.org/" target="_blank">LoadAverage</a> or <a href="https://status.vinilox.eu/" target="_blank">Vinilox</a>.</p>
+          <p>Popular GNU Social instances include <a href="https://quitter.se/" target="_blank">Quitter</a>, <a href="https://loadaverage.org/" target="_blank">LoadAverage</a> or <a href="https://status.vinilox.eu/" target="_blank">Vinilox</a>.</p>
         </td>
       </tr>
     </table>
@@ -544,13 +544,13 @@
         <!-- Messenger:Notes -->
         <td class="notes">
           <p>
-            Don't have a XMPP account yet? Have a look at the <a href="http://xmpp.net/" target="_blank">IM Observatory</a> and register one at a server of your choice.
+            Don't have a XMPP account yet? Have a look at the <a href="https://xmpp.net/" target="_blank">IM Observatory</a> and register one at a server of your choice.
           </p>
           <p>
             <a href="https://en.wikipedia.org/wiki/Off-the-Record_Messaging" target="_blank">OTR</a> stands for off-the-record, a form of end-to-end encryption. End-to-end encryption ensures that only the person with whom you're communicating can decrypt your message. 
           </p>
           <p>
-            <a href="http://thoughtcrime.org/blog/telegram-crypto-challenge/">Be careful</a> with trusting Telegram's encryption. They are also not end-to-end encrypted by default. All messages are stored on their servers except when using the "secret chat" option.
+            <a href="https://moxie.org/blog/telegram-crypto-challenge/">Be careful</a> with trusting Telegram's encryption. They are also not end-to-end encrypted by default. All messages are stored on their servers except when using the "secret chat" option.
           </td>
         </tr>
       </table>
@@ -622,7 +622,7 @@
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: 1.6</li>
-                  <li><a href="http://code.google.com/p/csipsimple/" target="_blank">Source code</a></li>
+                  <li><a href="https://code.google.com/archive/p/csipsimple/" target="_blank">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=com.csipsimple" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -647,7 +647,7 @@
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: 2.2</li>
-                  <li><a href="http://www.linphone.org/eng/download/git.html" target="_blank">Source code</a></li>
+                  <li><a href="https://www.linphone.org/technical-corner/linphone/overview" target="_blank">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=org.linphone" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -708,7 +708,7 @@
                 <ul>
                   <li>Price: Free</li>
                   <li>Min. Android version: 2.1</li>
-                  <li><a href="http://wiki.videolan.org/Developers_Corner">Source code</a></li>
+                  <li><a href="https://wiki.videolan.org/Developers_Corner">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=org.videolan.vlc" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1260,7 +1260,7 @@
               <div class="media-Text">
                 <h2 class="eps">RedReader</h2>
                 <p>
-                  RedReader is a news reader for the popular website <a href="http://reddit.com">reddit</a>. It comes with multiple languages and tablet mode.
+                  RedReader is a news reader for the popular website <a href="https://reddit.com">reddit</a>. It comes with multiple languages and tablet mode.
                 </p>
                 <ul>
                   <li>Price: Free</li>
@@ -1493,7 +1493,7 @@
           You can help improve the quality of OpenStreetMap by registering an account and <a href="http://learnosm.org/en/beginner/start-osm/" target="_blank">mapping your community</a>.
           </p>
           <p>
-		  It is possible to directly download maps for <a href="http://download.osmand.net/rawindexes/"target="_blank">OsmAnd</a> and <a href="http://direct.mapswithme.com/direct/latest/" target="_blank">MAPS.ME</a>.
+		  It is possible to directly download maps for <a href="https://download.osmand.net" target="_blank">OsmAnd</a> and <a href="http://direct.mapswithme.com/direct/latest/" target="_blank">MAPS.ME</a>.
           </td>
         </tr>
       </table>
@@ -1609,7 +1609,7 @@
               <div class="media-Text">
                 <h2 class="eps">ownCloud</h2>
                 <p>
-                  Connects to an <a href="http://owncloud.org">ownCloud</a> instance.
+                  Connects to an <a href="https://owncloud.org">ownCloud</a> instance.
                 </p>
                 <ul>
                   <li>Price: 0.79 &euro; (Google Play), Free (F-Droid) </li>
@@ -1639,7 +1639,7 @@
               <ul>
                 <li>Price: 3.33&euro; (Google Play), Free (F-Droid)</li>
                 <li>Min. Android version: 4.0</li>
-                <li><a href="http://davdroid.bitfire.at/source/" target="_blank">Source code</a></li>
+                <li><a href="https://gitlab.com/bitfireAT/davdroid" target="_blank">Source code</a></li>
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=at.bitfire.davdroid" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1693,7 +1693,7 @@
               <ul>
                 <li>Price: Free</li>
                 <li>Min. Android version: 4.0</li>
-                <li><a href="http://cgit.freedesktop.org/libreoffice/core/tree" target="_blank">Source code</a></li>
+                <li><a href="https://cgit.freedesktop.org/libreoffice/core/tree" target="_blank">Source code</a></li>
               </ul>
               <hr>
               <a href="https://play.google.com/store/apps/details?id=org.documentfoundation.libreoffice" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1791,7 +1791,7 @@
                 <ul>
                   <li>Price: Free </li>
                   <li>Min. Android version: 1.5</li>
-                  <li><a href="http://sourceforge.net/projects/crengine/reviews">Source code</a></li>
+                  <li><a href="https://sourceforge.net/projects/crengine/reviews">Source code</a></li>
                 </ul>
                 <hr>
                 <a href="https://play.google.com/store/apps/details?id=org.coolreader" target="_blank"><img src="img/misc/playstore.png" alt="Google Playstore" class="download" /></a>
@@ -1872,7 +1872,7 @@
             <div class="media-Text">
               <h2 class="eps">KeePassDroid</h2>
               <p>
-                KeePassDroid is a password manager that stores your passwords in an encrypted database which can be unlocked with a master passphrase. Passwords can then easily be entered into webpages or applications by copying them to the clipboard. The desktop counterpart is <a href="http://keepass.info/" target="_blank">KeePass</a>.
+                KeePassDroid is a password manager that stores your passwords in an encrypted database which can be unlocked with a master passphrase. Passwords can then easily be entered into webpages or applications by copying them to the clipboard. The desktop counterpart is <a href="https://keepass.info/" target="_blank">KeePass</a>.
               </p>
               <ul>
                 <li>Price: Free</li>
@@ -1943,7 +1943,7 @@
               <div class="media-Text">
                 <h2 class="eps">OpenConnect</h2>
                 <p>
-                  SSL VPN client compatible with traditional Cisco AnyConnect gateways and with <a href="http://www.infradead.org/ocserv/">ocserv</a>.
+                  SSL VPN client compatible with traditional Cisco AnyConnect gateways and with <a href="https://www.infradead.org/ocserv/">ocserv</a>.
                 </p>
                 <ul>
                   <li>Price: Free </li>
@@ -2125,7 +2125,7 @@
               <div class="media-Text">
                 <h2 class="eps">Flappy Cow</h2>
                 <p>
-                  A clone of the famous Flappy Bird game that has been <a href="http://www.theverge.com/2014/2/8/5393208/flappy-bird-creator-says-hes-pulling-the-game-offline-tomorrow">taken down in February 2014</a>.
+                  A clone of the famous Flappy Bird game that has been <a href="https://www.theverge.com/2014/2/8/5393208/flappy-bird-creator-says-hes-pulling-the-game-offline-tomorrow">taken down in February 2014</a>.
                 </p>
                 <ul>
                   <li>Price: Free </li>
@@ -2188,8 +2188,8 @@
      (document.getElementsByTagName('head')[0] || document.getElementsByTagName('body')[0]).appendChild(dsq);
    })();
    </script>
-   <noscript>Please enable JavaScript to view the <a href="http://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
-   <a href="http://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
+   <noscript>Please enable JavaScript to view the <a href="https://disqus.com/?ref_noscript">comments powered by Disqus.</a></noscript>
+   <a href="https://disqus.com" class="dsq-brlink">comments powered by <span class="logo-disqus">Disqus</span></a>
 
 
    <hr>
@@ -2204,7 +2204,7 @@
   <a href="https://www.eff.org/ " target="_blank" class="friends">
     <img src="img/misc/eff.png" alt="eff" class="friends" />
   </a>
-  <a href="http://opensource.org/" target="_blank" class="friends">
+  <a href="https://opensource.org/" target="_blank" class="friends">
     <img src="img/misc/osi_standard_logo.png" alt="OSI" class="friends" />
   </a>
   <a href="https://f-droid.org/" target="_blank" class="friends">
@@ -2230,11 +2230,11 @@
   </p>
   <p>
     <a href="https://creativecommons.org/licenses/by-sa/4.0/">Creative Commons BY-<abbr title="ShareAlike">SA</abbr></a> 2013-2015 by
-    <a href="http://repat.de" target="_blank">
+    <a href="https://repat.de" target="_blank">
       repat
     </a>
     - hosted on 
-    <a href="http://pages.github.com" title="GitHub Pages">
+    <a href="https://pages.github.com" title="GitHub Pages">
       GitHub Pages
     </a>
  Last update: 06. April 2015, 23:30
