--- a/index.html
+++ b/index.html
@@ -147,6 +147,29 @@
             </div>
           </div>
 
+          <!-- icecat -->
+          <div class="media emph-Block">
+            <div class="media-Object">
+              <a href="#!" class="pic-Rounded">
+                <img src="img/foss/icecat.png" alt="Icecat" class="floss" />
+              </a>
+            </div>
+            <div class="media-Text">
+              <h2 class="eps">Icecat</h2>
+              <p>
+                GNU version of Firefox, which gets rid of the non-free addons, plugins and the trademark license. It also adds privacy and security features. 
+              </p>
+              <ul>
+                <li>Price: Free</li>
+                <li>Min. Android version: 2.2</li>
+                <li><a href="http://git.savannah.gnu.org/cgit/gnuzilla.git" target="_blank">Source code</a></li>
+              </ul>
+              <hr>
+              <a href="https://f-droid.org/repository/browse/?fdid=org.gnu.icecat" target="_blank"><img src="img/misc/fdroid.png" alt="F-Droid repository" class="download" /></a>
+              <img src="img/misc/qr.gif" alt="QR code" class="download qr" id="icecat" />
+            </div>
+          </div>
+
           <!-- Lightning Browser -->
           <div class="media emph-Block">
             <div class="media-Object">
